#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.2       ??-??-02
#############################################################################

  * Changed coordinate indexing in some energy calculations
  * Updated documentation to reflect recent changes on Blue Horizon
  * Improved speed of problem setup BUT NOW RESTRICT use of input coefficient
    maps (see documentation)
  * Updated documentation, placing particular emphasis on use of Intel
    compilers and vendor BLAS on Intel Linux systems
  * Fixed bug for nonpolar force evaluation in Vpmg_dbnpForce
  * Removed MG test scripts -- use bin/*.c for templates/testing
  * Made main driver code completely memory-leak free (i.e., if you wanted to
    wrap it and call it repeatedly -- Thanks to Robert Konecny)
  * Fixed main driver code for compatibility with SGI compilers (Thanks to
    Fabrice Leclerc)
  * Made focused evaluation of forces more sensible.
  * Added 'print force' statement
  * Fixed bug in OpenDX input/output (OpenDX documentation is lousy!)

#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.1       04-23-02
#############################################################################
This version requires the latest version of MALOC to work properly!
  * Syntax changes
    - The writepot and writeacc keywords have been generalized and new I/O
      features have been added.  The syntax is
      now:  write pot dx potential
            write smol dx potential
            etc.
      Please see the User's Manual for more information
    - The read keywords has been generalized and new I/O features have been
      added which support the use of pre-calculated coefficient grids, etc..
      The correct syntax for reading in a molecule is now 
      "read mol pqr mol.pqr end"; please see the User's Manual for more
      information.