@@ -2,6 +2,7 @@
 BETA PUBLIC RELEASE VERSION 0.2.2       ??-??-02
 #############################################################################
 
+  * There were several other changes along the way... I lost track.
   * Changed coordinate indexing in some energy calculations
   * Updated documentation to reflect recent changes on Blue Horizon
   * Improved speed of problem setup BUT NOW RESTRICT use of input coefficient
